# dbg-swc

./: .gitignore  Cargo.toml
src/: bundle.rs  main.rs  minify.rs  test.rs  util.rs
src/util/: mod.rs
